feat : feedback in progress

--- a/.env copy.exemple
+++ b/.env copy.exemple
@@ -21,7 +21,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=helpora_v2
+DB_DATABASE=helpora
 DB_USERNAME=root
 DB_PASSWORD=
 
